--- a/Challenge_01/nft-preview-card-component-main/nft-preview-card-component-main/index.html
+++ b/Challenge_01/nft-preview-card-component-main/nft-preview-card-component-main/index.html
@@ -55,7 +55,7 @@
             </div>
             <div>
               <img
-                src="/images/icon-clock.svg"
+                src="./images/icon-clock.svg"
                 alt="image"
                 style="width: 15px; border-radius: 10px"
               />
