--- a/Challenge_01/nft-preview-card-component/index.html
+++ b/Challenge_01/nft-preview-card-component/index.html
@@ -71,7 +71,7 @@
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
-        href="#">Buddhadeb Chhetri</a>.
+        href="https://github.com/Buddhad">Buddhadeb Chhetri</a>.
     </div>
   </div>
 </body>
