--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <div class="face face1">
         <div class="content">
           <span class="stars"></span>
-          <h2 class="three">Three</h2>
+          <h2 class="three">Order Summary</h2>
           <p class="three">
-            <a href="./Challenge_01/nft-preview-card-component-main/nft-preview-card-component-main/index.html">
+            <a href="./Challenge_03/order-summary-component/index.html">
               Link</a>
           </p>
         </div>
