--- a/Challenge_02/qr-code-component/index.html
+++ b/Challenge_02/qr-code-component/index.html
@@ -33,7 +33,7 @@
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
-        href="https://github.com/Buddhad">Buddhadeb Chhetri</a>.
+        href="https://github.com/Buddhad" target="_blank">Buddhadeb Chhetri</a>.
     </div>
   </div>
 </body>
