--- a/Challenge_03/order-summary-component/index.html
+++ b/Challenge_03/order-summary-component/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -11,7 +12,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="main">
     <div class="card">
       <img src="./images/illustration-hero.svg" alt="illustration-hero"
         style="width: 100%; border-radius: 20px 20px 0 0" />
@@ -64,7 +65,7 @@
     </div>
 
     <br />
-    <div class="attribution">
+    <div class="footer">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
       <a href="https://github.com/Buddhad" target="_blank">Buddhadeb Chhetri</a>.
