--- a/Challenge_01/nft-preview-card-component/index.html
+++ b/Challenge_01/nft-preview-card-component/index.html
@@ -23,7 +23,7 @@
         <p style="color: hsl(215, 51%, 70%); font-family: 'Outfit', sans-serif">
           Our Equilibrium collection promotes balance and calm.
         </p>
-        <div class="content">
+        <!-- <div class="content">
           <div>
             <img src="./images/icon-ethereum.svg" alt="image" style="width: 15px; border-radius: 10px" />
           </div>
@@ -35,6 +35,22 @@
           </div>
           <div>
             <p style="color: hsl(215, 51%, 70%)">3 days left</p>
+          </div>
+        </div> -->
+        <div class="content">
+          <div>
+            <p style="color: hsl(178, 100%, 50%); ">
+              <img src="./images/icon-ethereum.svg" alt="icon_Ethereum"
+                style="width: 15px;position:relative; top: 5px; ">
+              &nbsp; 0.041 ETH
+            </p>
+          </div>
+          <div>
+            <p>
+              <img src="./images/icon-clock.svg" alt="Clock_image" style="width: 15px; position:relative; top: 4px; ">
+              &nbsp; 3 days left
+            </p>
+
           </div>
         </div>
       </div>
