--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
       <div class="face face1">
         <div class="content">
           <span class="stars"></span>
-          <h2 class="four">Four</h2>
+          <h2 class="four">3-column card </h2>
           <p class="four">
-            <a href="./Challenge_01/nft-preview-card-component-main/nft-preview-card-component-main/index.html">
+            <a href="./Challenge_04/3-column-preview-card-component/index.html">
               Link</a>
           </p>
         </div>
