--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <span class="stars"></span>
           <h2 class="one">NFT Card</h2>
           <p class="one">
-            <a href="./Challenge_01/nft-preview-card-component/index.html">
+            <a href="./Challenge_01/nft-preview-card-component/index.html" target="_blank">
               Link</a>
           </p>
         </div>
@@ -34,7 +34,7 @@
           <span class="stars"></span>
           <h2 class="two">QR Code</h2>
           <p class="two">
-            <a href="./Challenge_02/qr-code-component/index.html">
+            <a href="./Challenge_02/qr-code-component/index.html" target="_blank">
               Link</a>
           </p>
         </div>
@@ -50,7 +50,7 @@
           <span class="stars"></span>
           <h2 class="three">Order Summary</h2>
           <p class="three">
-            <a href="./Challenge_03/order-summary-component/index.html">
+            <a href="./Challenge_03/order-summary-component/index.html" target="_blank">
               Link</a>
           </p>
         </div>
@@ -66,7 +66,7 @@
           <span class="stars"></span>
           <h2 class="four">3-column card </h2>
           <p class="four">
-            <a href="./Challenge_04/3-column-preview-card-component/index.html">
+            <a href="./Challenge_04/3-column-preview-card-component/index.html" target="_blank">
               Link</a>
           </p>
         </div>
@@ -80,9 +80,9 @@
       <div class="face face1">
         <div class="content">
           <span class="stars"></span>
-          <h2 class="five">Five</h2>
+          <h2 class="five">Profile Card</h2>
           <p class="five">
-            <a href="./Challenge_01/nft-preview-card-component-main/nft-preview-card-component-main/index.html">
+            <a href="./Challenge_05/profile-card-component-main/index.html" target="_blank">
               Link</a>
           </p>
         </div>
