--- a/index.html
+++ b/index.html
@@ -91,6 +91,44 @@
         <h2>05</h2>
       </div>
     </div>
+
+    <div class="card">
+      <div class="face face1">
+        <div class="content">
+          <span class="stars"></span>
+          <h2 class="six">Six</h2>
+          <p class="six">
+            <a href="./Challenge_05/profile-card-component-main/index.html" target="_blank">
+              Link</a>
+          </p>
+        </div>
+      </div>
+      <div class="face face2">
+        <h2>06</h2>
+      </div>
+    </div>
+
+
+
+    <div class="card">
+      <div class="face face1">
+        <div class="content">
+          <span class="stars"></span>
+          <h2 class="seven">Seven</h2>
+          <p class="seven">
+            <a href="./Challenge_05/profile-card-component-main/index.html" target="_blank">
+              Link</a>
+          </p>
+        </div>
+      </div>
+      <div class="face face2">
+        <h2>07</h2>
+      </div>
+    </div>
+
+
+
+
   </div>
 </body>
 
