--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
       <div class="face face1">
         <div class="content">
           <span class="stars"></span>
-          <h2 class="six">Six</h2>
+          <h2 class="six">Stats Preview Card</h2>
           <p class="six">
-            <a href="./Challenge_05/profile-card-component-main/index.html" target="_blank">
+            <a href="./Challenge_06/stats-preview-card-component/index.html" target="_blank">
               Link</a>
           </p>
         </div>
