edited some changes 🛠🛠

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <span class="stars"></span>
           <h2 class="seven">Seven</h2>
           <p class="seven">
-            <a href="./Challenge_05/profile-card-component-main/index.html" target="_blank">
+            <a href="./" target="_blank">
               Link</a>
           </p>
         </div>
@@ -125,8 +125,6 @@
         <h2>07</h2>
       </div>
     </div>
-
-
 
 
   </div>
