--- a/index.html
+++ b/index.html
@@ -116,13 +116,29 @@
           <span class="stars"></span>
           <h2 class="seven">Seven</h2>
           <p class="seven">
-            <a href="./" target="_blank">
+            <a href="./Challenge_07/product-preview-card-component/index.html" target="_blank">
               Link</a>
           </p>
         </div>
       </div>
       <div class="face face2">
         <h2>07</h2>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="face face1">
+        <div class="content">
+          <span class="stars"></span>
+          <h2 class="seven">Eight</h2>
+          <p class="seven">
+            <a href="./Challenge_08/product-preview-card-component/index.html" target="_blank">
+              Link</a>
+          </p>
+        </div>
+      </div>
+      <div class="face face2">
+        <h2>08</h2>
       </div>
     </div>
 
