working on it challenge 8🔥

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="face face1">
         <div class="content">
           <span class="stars"></span>
-          <h2 class="seven">Seven</h2>
+          <h2 class="seven">Product preview card</h2>
           <p class="seven">
             <a href="./Challenge_07/product-preview-card-component/index.html" target="_blank">
               Link</a>
@@ -130,9 +130,9 @@
       <div class="face face1">
         <div class="content">
           <span class="stars"></span>
-          <h2 class="seven">Eight</h2>
+          <h2 class="seven">Quiz Website</h2>
           <p class="seven">
-            <a href="./Challenge_08/product-preview-card-component/index.html" target="_blank">
+            <a href="./Challenge_08/index.html" target="_blank">
               Link</a>
           </p>
         </div>
