--- a/Challenge_08/index.html
+++ b/Challenge_08/index.html
@@ -5,31 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/Frontend_Mentor/Challenge_08/img/Pika.png" type="image/x-icon">
     
     <title>Quiz Website</title>
 </head>
 <body>
-    <div class="main">
-        <div class="quiz_container">
+    <div class="main" >
+        <div class="quiz_container" id="quiz">
             <div class="quiz_header">
                 <h2 id="question">Question Text</h2>
             </div>
             <div class="select_option">
                 <ul>
                     <li>
-                        <input type="radio" name="answer" id="a">
+                        <input type="radio" name="answer" class="answer" id="a">
                         <label id="a_text" for="a">Question</label>
                     </li>
                     <li>
-                        <input type="radio" name="answer" id="b">
+                        <input type="radio" name="answer" class="answer" id="b">
                         <label id="b_text" for="b">Question</label>
                     </li>
                     <li>
-                        <input type="radio" name="answer" id="c">
+                        <input type="radio" name="answer" class="answer" id="c">
                         <label id="c_text" for="c">Question</label>
                     </li>
                     <li>
-                        <input type="radio" name="answer" id="d">
+                        <input type="radio" name="answer" class="answer" id="d">
                         <label id="d_text" for="d">Question</label>
                     </li>
                 </ul>
